# Duplicator-search-destroy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
docs/: ARCHITECTURE.md  USAGE.md
src/duplicator_search_destroy/: __init__.py  __main__.py  app.py
src/duplicator_search_destroy/gui/: __init__.py  credentials_tab.py  dashboard_tab.py  duplicates_tab.py  main_window.py  reports_tab.py  scan_tab.py  worker.py
src/duplicator_search_destroy/models/: __init__.py  database.py  schema.py
src/duplicator_search_destroy/scanner/: __init__.py  duplicates.py  files.py  hasher.py  network.py  orchestrator.py  progress.py  remote_hash.py  shares.py  winrm_client.py
src/duplicator_search_destroy/utils/: __init__.py  crypto.py  formatting.py  ip_utils.py  logging_setup.py
tests/: conftest.py  test_cli_selftest.py  test_crypto.py  test_database.py  test_duplicates.py  test_end_to_end_workflow.py  test_formatting.py  test_hasher.py  test_ip_utils.py  test_ip_utils_extra.py  test_network.py  test_orchestrator_deep_tree.py  test_orchestrator_discover.py  test_orchestrator_file_scan.py  test_orchestrator_parallel.py  test_package_integrity.py  test_progress.py  test_remote_hash.py  test_reports_queries.py  test_resume_and_cancel.py  test_shares_errors.py  test_winrm_client.py
