[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duplicator-search-destroy"
version = "1.0.0"
description = "Network file inventory and duplicate detector for Windows SMB shares"
requires-python = ">=3.11"
authors = [{ name = "Squirrelnuttz4u" }]
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.7",
    "smbprotocol>=1.15",
    "xxhash>=3.5",
    "blake3>=0.4",
    "cryptography>=41",
    "pypsrp>=0.8",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]
dev = ["pytest>=8", "pytest-cov>=4"]

[project.scripts]
duplicator-search-destroy = "duplicator_search_destroy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
